# zigbee_daemon

./: .gitignore  Makefile  README.md
AppDoorLock/app/: build.gradle  proguard-rules.pro
AppDoorLock/app/src/androidTest/java/com/example/chandler/doorlock/: ExampleInstrumentedTest.java
AppDoorLock/app/src/main/: AndroidManifest.xml
AppDoorLock/app/src/main/java/com/example/chandler/doorlock/: Data.java  MainActivity.java  mAdapter.java
AppDoorLock/app/src/main/res/layout/: app_bar_main.xml  content_main.xml  item_list.xml  nav_header_main.xml
AppDoorLock/app/src/main/res/menu/: activity_main_drawer.xml
AppDoorLock/app/src/main/res/values/: strings.xml
AppDoorLock/app/src/test/java/com/example/chandler/doorlock/: ExampleUnitTest.java
AppDoorLock/gradle/wrapper/: gradle-wrapper.properties
Doc/: ZigbeeDaemonJsonProtocol.xlsx
doc/: ZigbeeDaemon通信设计文档.xlsx
files/: zigbee_daemon
files/zigbee_client/: Makefile  ReadMe.txt  main.c  socket_client.c
link_message/: Makefile  Serial_LinkCommand.c  Serial_LinkCommand.h
mt7628_button/: CMakeLists.txt
mt7628_button/button_application/: Makefile
mt7628_button/button_application/src/: Makefile  button_application.c
mt7628_button/button_driver/: Makefile
mt7628_button/button_driver/src/: Makefile  button_driver.c  button_driver.h  ralink_gpio.c  ralink_gpio.h
simple_config/: CMakeLists.txt  Makefile
simple_config/files/: simple_config_daemon  wireless.sh
simple_config/src/: CMakeLists.txt  Makefile  main.c
simple_config/src/comm/: zigbee_discovery.c  zigbee_discovery.h
simple_config/src/utils/: utils.h
simple_config/src/wifi/: wifi_parse.c  wifi_parse.h
src/: Makefile  Serial.c  Serial.h  SerialLink.c  SerialLink.h  Threads.c  Threads.h  Utils.h  ZigbeeControlBridge.c  ZigbeeControlBridge.h  ZigbeeDevices.c  ZigbeeDevices.h  ZigbeeNetwork.c  ZigbeeNetwork.h  ZigbeeSocketServer.c  ZigbeeSocketServer.h  ZigbeeSqlite.c  ZigbeeSqlite.h  list.c  list.h  serial.c  serial.h  serial_link.c  serial_link.h  threads.c  threads.h  utils.h  zigbee-jip-daemon.c  zigbee_constant.h  zigbee_control_bridge.c  zigbee_control_bridge.h  zigbee_devices.c  zigbee_devices.h  zigbee_network.c  zigbee_network.h  zigbee_socket_server.c  zigbee_socket_server.h  zigbee_sqlite.c  zigbee_sqlite.h  zigbee_tb_daemon.c  (+1 more)
zigbee_client/C/: Makefile
zigbee_client/Python/: zigbee_client.py
zigbee_client/Python/mLib/: __init__.py  mDaemon.py  mDbg.py  mDecorator.py  mProcess.py  mThread.py  setup.py
zigbee_daemon/: CMakeLists.txt  Makefile  main.c  mthread.c  mthread.h  serial.c  serial_link.c  serial_link.h  utils.h  zigbee_cloud.c  zigbee_cloud.h  zigbee_control_bridge.c  zigbee_control_bridge.h  zigbee_daemon.sh  zigbee_devices.c  zigbee_devices.h  zigbee_discovery.c  zigbee_node.c  zigbee_node.h  zigbee_socket.c  zigbee_socket.h  zigbee_sqlite.c  zigbee_sqlite.h  zigbee_zcl.h
zigbee_daemon/comm/: zigbee_discovery.c  zigbee_socket.c  zigbee_socket.h
zigbee_daemon/control-bridge/: serial.h  serial_link.h  zigbee_control_bridge.c  zigbee_control_bridge.h
zigbee_daemon/devices/: coordinator.c  coordinator.h  door_lock.c  door_lock.h  door_lock_controller.c  door_lock_controller.h  zigbee_devices.c  zigbee_devices.h
zigbee_daemon/files/: button_mknod.sh  zigbee_daemon
zigbee_daemon/src/: CMakeLists.txt  Makefile  main.c
zigbee_daemon/src/comm/: zigbee_cloud.c  zigbee_cloud.h  zigbee_discovery.c  zigbee_discovery.h  zigbee_socket.c  zigbee_socket.h
zigbee_daemon/src/control-bridge/: serial_link.c  serial_link.h  zigbee_control_bridge.c  zigbee_control_bridge.h
zigbee_daemon/src/devices/: coordinator.c  coordinator.h  door_lock.h  door_lock_controller.c  door_lock_controller.h  zigbee_devices.c  zigbee_devices.h
zigbee_daemon/src/utils/: mthread.c  mthread.h  utils.h  zigbee_button.c  zigbee_button.h  zigbee_sqlite.c  zigbee_sqlite.h
zigbee_daemon/src/zigbee/: zigbee_node.c  zigbee_node.h
zigbee_daemon/utils/: Makefile  list.c  utils.h  zigbee_sqlite.c  zigbee_sqlite.h
zigbee_daemon/zigbee/: zigbee_node.c  zigbee_node.h  zigbee_zcl.h
zigbee_flash/: Firmware.c  JN51xx_BootLoader.c  Makefile  main.c  programmer.c  programmer.h  uart.c
